# math_ops_ffi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
cpp/include/: math_ops.h
cpp/src/: math_ops.cpp
src/: lib.rs  main.rs
